# madn

./: Cargo.toml  README.md
.github/workflows/: build-server.yaml
mocks/: Cargo.toml
mocks/src/: lib.rs  rng.rs  socket.rs
server/: Cargo.toml  Dockerfile  chat.html
server/assets/: dice.css  index.html  style.css
server/src/: game.rs  lib.rs  main.rs  player.rs  statemachine.rs
server/tests/: rolls.rs
