[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
axum = { version = "0.6.1", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
rand = { version = "0.8.5", features = ["small_rng"] }
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }

[dev-dependencies]
mocks = { path = "../mocks" }